--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.3",
-    "husky": "^8.0.1",
+    "husky": "4.0.7",
     "jest": "^28.1.3",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "9.5.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
