--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
+    "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -30,5 +31,8 @@
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
